--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Header goes here, do not edit -->
     <nav class="navbar navbar-toggleable-md navbar-expand-md sticky-top shadow p-3 mb-5" role="navigation">
 		<div class="container">
-		<a class="navbar-brand" href="#"><img src="./assets/img/Logo.png"></a>
+		<a class="navbar-brand" href="#"><img src="./assets/img/Logo.png" alt="logo"></a>
 		<button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1">
             <span><i class="fa fa-bars" aria-hidden="true"></i></span>
         </button>
@@ -63,9 +63,9 @@
         <div class="navigation">
             <ul>
                 <li class="ml-0"><a class="green-text" href="#">Home</a></li>
-                <span  class="green-text">.</span>
+                <span>.</span>
                 <li><a class="green-text" href="#">Reports</a></li>
-                <span  class="green-text">.</span>
+                <span>.</span>
                 <li><a class="green-text" href="#">Ministry Reports</a></li>
             </ul>
         </div>
@@ -100,7 +100,7 @@
             <div class="container">
                 <div class="row occupy">
                     <div class="col-sm-1 mt-1 ">
-                        <img src="./assets/images/profile-image.svg" alt="">
+                        <img src="./assets/images/profile-image.svg" alt="profile-image">
                     </div>
                     <div class="col-sm-11">
                         <div class="d-flex justify-content-between">
@@ -130,7 +130,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-1 mt-1">
-                        <img src="./assets/images/profile-image.svg" alt="">
+                        <img src="./assets/images/profile-image.svg" alt="profile-image">
                     </div>
                     <div class="col-sm-11">
                         <div class="d-flex justify-content-between">
@@ -160,7 +160,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-1 mt-1">
-                        <img src="./assets/images/profile-image.svg" alt="">
+                        <img src="./assets/images/profile-image.svg" alt="profile-image">
                     </div>
                     <div class="col-sm-11">
                         <div class="d-flex justify-content-between">
@@ -189,7 +189,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-1 mt-1">
-                        <img src="./assets/images/profile-image.svg" alt="">
+                        <img src="./assets/images/profile-image.svg" alt="profile-image">
                     </div>
                     <div class="col-sm-11">
                         <div class="d-flex justify-content-between">
@@ -213,7 +213,7 @@
                                 <div class="container">
                                     <div class="row occupy">
                                         <div class="col-sm-1 mt-1 ">
-                                            <img src="./assets/images/profile-image.svg" alt="">
+                                            <img src="./assets/images/profile-image.svg" alt="profile-image">
                                         </div>
                                         <div class="col-sm-11">
                                             <div class="d-flex justify-content-between">
@@ -258,7 +258,7 @@
             <div class="row">
                 <div class="col-md-2 footer-brand ">
                     <a href="index.html">
-                        <img src="./assets/img/Frame 390.png" class="ft">
+                        <img src="./assets/img/Frame 390.png" class="ft" alt="logo">
                     </a> <br><br>
                     <a href=""><i class="fab fa-twitter" aria-hidden="true"></i><small> @expenseng</small></a>               
                 </div>
