--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <!-- Meta Tags -->
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, minimium-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="Description" content="This is the ministry reports section - Page 2 "/>
 
@@ -19,7 +19,7 @@
 <script src="https://kit.fontawesome.com/9b1c8d52ed.js" crossorigin="anonymous"></script>
 
 <!-- Import CSS -->
-<link rel="stylesheet" href="assets/css/index.css">
+<link rel="stylesheet" href="assets/css/about us-header_footer.css">
 <link rel="stylesheet" href="assets/css/ministry_report_comments.css">
 <title>FG Expense - Expense Report</title>
 </head>
@@ -99,7 +99,7 @@
 
    
     <div class="container mb-4 mt-4">
-        <div class="card p-2">
+        <div class="card p-3">
             <div class="container">
                 <div class="row occupy">
                     <div class="col-sm-1 mt-1 ">
@@ -129,7 +129,7 @@
 
    
     <div class="container mb-4 mt-4">
-        <div class="card p-2">
+        <div class="card p-3">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-1 mt-1">
@@ -159,7 +159,7 @@
 
     
     <div class="container mb-4 mt-4">
-        <div class="card p-2">
+        <div class="card p-3">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-1 mt-1">
@@ -188,7 +188,7 @@
     </div>
 
     <div class="container mb-4 mt-4">
-        <div class="card p-2">
+        <div class="card p-3">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-1 mt-1">
