--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <script src="https://kit.fontawesome.com/9b1c8d52ed.js" crossorigin="anonymous"></script>
 
 <!-- Import CSS -->
-<link rel="stylesheet" href="assets/css/about us-header_footer.css">
+<link rel="stylesheet" href="assets/css/index.css">
 <link rel="stylesheet" href="assets/css/ministry_report_comments.css">
 <title>FG Expense - Expense Report</title>
 </head>
