--- a/index.html
+++ b/index.html
@@ -102,11 +102,15 @@
         <div class="card p-3">
             <div class="container">
                 <div class="row occupy">
-                    <div class="col-sm-1 mt-1 ">
-                        <img src="./assets/images/profile-image.svg" alt="profile-image">
+                    <div class="col-sm-1 mt-1 row d-flex container">
+                        <img src="./assets/images/profile-image.svg"class="resize"alt="profile-image">
+                        <div class="ml-3 mt-2 be-gone">
+                            <p class="green-text">James Emmanuel<br>
+                            <span class="mt-0 grey-text small mt-1">2mins ago</span></p>
+                        </div>
                     </div>
                     <div class="col-sm-11">
-                        <div class="d-flex justify-content-between">
+                        <div class="d-flex justify-content-between  no-show">
                             <div class="d-flex">
                                 <p class="green-text">James Emmanuel</p>
                                 <p class="ml-3 grey-text small mt-1">2mins ago</p>
@@ -131,12 +135,16 @@
     <div class="container mb-4 mt-4">
         <div class="card p-3">
             <div class="container">
-                <div class="row">
-                    <div class="col-sm-1 mt-1">
-                        <img src="./assets/images/profile-image.svg" alt="profile-image">
+                <div class="row occupy">
+                    <div class="col-sm-1 mt-1 row d-flex container">
+                        <img src="./assets/images/profile-image.svg"class="resize"alt="profile-image">
+                        <div class="ml-3 mt-2 be-gone">
+                            <p class="green-text">James Emmanuel<br>
+                            <span class="mt-0 grey-text small mt-1">2mins ago</span></p>
+                        </div>
                     </div>
                     <div class="col-sm-11">
-                        <div class="d-flex justify-content-between">
+                        <div class="d-flex justify-content-between  no-show">
                             <div class="d-flex">
                                 <p class="green-text">James Emmanuel</p>
                                 <p class="ml-3 grey-text small mt-1">2mins ago</p>
@@ -161,12 +169,16 @@
     <div class="container mb-4 mt-4">
         <div class="card p-3">
             <div class="container">
-                <div class="row">
-                    <div class="col-sm-1 mt-1">
-                        <img src="./assets/images/profile-image.svg" alt="profile-image">
+                <div class="row occupy">
+                    <div class="col-sm-1 mt-1 row d-flex container">
+                        <img src="./assets/images/profile-image.svg"class="resize"alt="profile-image">
+                        <div class="ml-3 mt-2 be-gone">
+                            <p class="green-text">James Emmanuel<br>
+                            <span class="mt-0 grey-text small mt-1">2mins ago</span></p>
+                        </div>
                     </div>
                     <div class="col-sm-11">
-                        <div class="d-flex justify-content-between">
+                        <div class="d-flex justify-content-between  no-show">
                             <div class="d-flex">
                                 <p class="green-text">James Emmanuel</p>
                                 <p class="ml-3 grey-text small mt-1">2mins ago</p>
@@ -190,12 +202,16 @@
     <div class="container mb-4 mt-4">
         <div class="card p-3">
             <div class="container">
-                <div class="row">
-                    <div class="col-sm-1 mt-1">
-                        <img src="./assets/images/profile-image.svg" alt="profile-image">
+                <div class="row occupy">
+                    <div class="col-sm-1 mt-1 row d-flex container">
+                        <img src="./assets/images/profile-image.svg"class="resize"alt="profile-image">
+                        <div class="ml-3 mt-2 be-gone">
+                            <p class="green-text">James Emmanuel<br>
+                            <span class="mt-0 grey-text small mt-1">2mins ago</span></p>
+                        </div>
                     </div>
                     <div class="col-sm-11">
-                        <div class="d-flex justify-content-between">
+                        <div class="d-flex justify-content-between  no-show">
                             <div class="d-flex">
                                 <p class="green-text">James Emmanuel</p>
                                 <p class="ml-3 grey-text small mt-1">2mins ago</p>
@@ -210,24 +226,28 @@
                             <span class="d-flex mr-3"><i class="far fa-thumbs-down"></i> <p class="small mt-1">0</p></span>
                             <span class="d-flex mr-3"><i class="far fa-comment"></i><p class="small mt-1">Reply</p></span>
                         </div>
-                          
-                        <div class=" mb-4 mt-4">
-                            <div class=" p-2">
+                    </div>
+                        <div class="container mb-4 mt-4">
+                            <div class="container p-2">
                                 <div class="container">
-                                    <div class="row occupy">
-                                        <div class="col-sm-1 mt-1 ">
-                                            <img src="./assets/images/profile-image.svg" alt="profile-image">
+                                    <div class="row container occupy">
+                                        <div class="col-sm-1 mt-1 row d-flex container">
+                                            <img src="./assets/images/profile-image.svg"class="reduce"alt="profile-image">
+                                            <div class="ml-3 mt-2 be-gone">
+                                                <p class="green-text">James Emmanuel<br>
+                                                <span class="mt-0 grey-text small mt-1">2mins ago</span></p>
+                                            </div>
                                         </div>
-                                        <div class="col-sm-11">
-                                            <div class="d-flex justify-content-between">
-                                                <div class="d-flex">
-                                                    <p class="green-text">James Emmanuel</p>
+                                        <div class="col-sm-11 ">
+                                            <div class="d-flex justify-content-between ">
+                                                <div class="d-flex no-show">
+                                                    <p class="green-text">Kingsley Adams</p>
                                                     <p class="ml-3 grey-text small mt-1">2mins ago</p>
                                                 </div>
-                                                <i class="fas fa-ellipsis-h grey-text"></i>
+                                                <i class="fas fa-ellipsis-h grey-text no-show"></i>
                                             </div>
                                             <div>
-                                                <p>This is so nice to read, I can see the improvement in this sector this is really encouraging . Kudos !!!</p>
+                                                <p>Yes, I agree. It's Amazing!</p>
                                             </div>
                                             <div class="d-flex text-center align-content-center  icons justify-content-start">
                                                 <span class="d-flex mr-3"><i class="far fa-thumbs-up"></i><p class="small mt-1">23</p></span>
